--- a/app/src/app/pages/home/home.page.html
+++ b/app/src/app/pages/home/home.page.html
@@ -7,7 +7,7 @@
 
   <ng-template #userLoading>
     <main>
-      User loading wait for it...
+      Initializing your anonymous user
     </main>
   </ng-template>
 </ion-content>
