--- a/app/src/app/components/feed/feed.component.html
+++ b/app/src/app/components/feed/feed.component.html
@@ -4,7 +4,9 @@
       <ion-label class="column-title">Incoming</ion-label>
 
       <ion-card *ngFor="let flat of (flats$ | async);" mode="md">
-        <img [src]="flat.data.image_url"/>
+        <img [src]="flat.data.image_url" [class.ronorp]="flat.data.source === 'ronorp'"/>
+
+        <ion-badge>Ronorp</ion-badge>
 
         <ion-card-header>
           <ion-card-subtitle>{{toDateObj(flat.data.published_at) | date: 'short'}}</ion-card-subtitle>
