feat: drag and drop style

--- a/app/src/app/components/feed/feed.component.html
+++ b/app/src/app/components/feed/feed.component.html
@@ -1,44 +1,66 @@
 <ng-container *ngIf="loaded; else feedLoading;">
   <main>
-    <section dragula="bag" [attr.status]="'incoming'">
+    <section>
       <ion-label class="column-title">Incoming</ion-label>
 
-      <ion-card *ngFor="let flat of (flats$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
-        <img [src]="flat.data.image_url" [class.ronorp]="flat.data.source === 'ronorp'"/>
+      <div dragula="bag" [attr.status]="'incoming'">
+        <ion-card *ngFor="let flat of (flats$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
+          <img [src]="flat.data.image_url" [class.ronorp]="flat.data.source === 'ronorp'"/>
 
-        <ion-badge>Ronorp</ion-badge>
+          <ion-badge>Ronorp</ion-badge>
 
-        <ion-card-header>
-          <ion-card-subtitle>{{toDateObj(flat.data.published_at) | date: 'short'}}</ion-card-subtitle>
-          <ion-card-title>{{flat.data.title}}</ion-card-title>
-        </ion-card-header>
+          <ion-card-header>
+            <ion-card-subtitle>{{toDateObj(flat.data.published_at) | date: 'short'}}</ion-card-subtitle>
+            <ion-card-title>{{flat.data.title}}</ion-card-title>
+          </ion-card-header>
 
-        <ion-card-content>
-          <p>{{flat.data.rooms}} rooms</p>
-          <p>{{flat.data.location}}</p>
-          <p>{{flat.data.price | currency:'CHF':'symbol':'4.2-2'}}</p>
-        </ion-card-content>
-      </ion-card>
+          <ion-card-content>
+            <p>{{flat.data.rooms}} rooms</p>
+            <p>{{flat.data.location}}</p>
+            <p>{{flat.data.price | currency:'CHF':'symbol':'4.2-2'}}</p>
+          </ion-card-content>
+        </ion-card>
+      </div>
     </section>
 
-    <section dragula="bag" [attr.status]="'dislike'">
+    <section>
       <ion-label class="column-title">Dislike</ion-label>
+
+      <div dragula="bag" [attr.status]="'dislike'">
+
+      </div>
     </section>
 
-    <section dragula="bag" [attr.status]="'sightseeing'">
+    <section>
       <ion-label class="column-title">Sightseeing</ion-label>
+
+      <div dragula="bag" [attr.status]="'sightseeing'">
+
+      </div>
     </section>
 
-    <section dragula="bag" [attr.status]="'applied'">
+    <section>
       <ion-label class="column-title">Applied for</ion-label>
+
+      <div dragula="bag" [attr.status]="'applied'">
+
+      </div>
     </section>
 
-    <section dragula="bag" [attr.status]="'rejected'">
+    <section>
       <ion-label class="column-title">Rejected</ion-label>
+
+      <div dragula="bag" [attr.status]="'rejected'">
+
+      </div>
     </section>
 
-    <section dragula="bag" [attr.status]="'winner'">
+    <section>
       <ion-label class="column-title">Winner</ion-label>
+
+      <div dragula="bag" [attr.status]="'winner'">
+
+      </div>
     </section>
   </main>
 
