--- a/app/src/app/components/feed/feed.component.html
+++ b/app/src/app/components/feed/feed.component.html
@@ -5,9 +5,9 @@
 
       <div dragula="bag" [attr.status]="'new'">
         <ion-card *ngFor="let flat of (flats$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
-          <img [src]="flat.data.image_url" [class.ronorp]="flat.data.source === 'ronorp'"/>
+          <img [src]="flat.data.image_url"/>
 
-          <ion-badge>Ronorp</ion-badge>
+          <ion-badge [class.ronorp]="flat.data.source === 'ronorp'">Ronorp</ion-badge>
 
           <ion-card-header>
             <ion-card-subtitle>{{toDateObj(flat.data.published_at) | date: 'short'}}</ion-card-subtitle>
