feat: spinner color

--- a/app/src/app/components/feed/feed.component.html
+++ b/app/src/app/components/feed/feed.component.html
@@ -5,8 +5,7 @@
 
       <div dragula="bag" [attr.status]="'new'">
         <app-flat [status]="'new'"
-                  (open)="open($event)"
-                  (lastPageReached)="lastPageReached($event)"></app-flat>
+                  (open)="open($event)"></app-flat>
       </div>
     </section>
 
@@ -15,8 +14,7 @@
 
       <div dragula="bag" [attr.status]="'disliked'">
         <app-flat [status]="'disliked'"
-                  (open)="open($event)"
-                  (lastPageReached)="lastPageReached($event)"></app-flat>
+                  (open)="open($event)"></app-flat>
       </div>
     </section>
 
