--- a/app/src/app/components/feed/feed.component.scss
+++ b/app/src/app/components/feed/feed.component.scss
@@ -15,16 +15,23 @@ main {
     grid-gap: .5rem;
     margin: .5rem 0;
 
+    height: 100%;
+
     background: var(--ion-color-light);
     border-radius: 3px;
 
-    div[status] {
-      min-height: 100vh;
-    }
+    >  div{
+      display: flex;
+      flex-direction: column;
 
-    ion-label.column-title {
-      padding: 8px 16px 0;
-      font-weight: 500;
+      ion-label.column-title {
+        padding: 8px 16px 0;
+        font-weight: 500;
+      }
+
+      div[status] {
+        min-height: 100%;
+      }
     }
   }
 }
