--- a/app/src/app/components/feed/feed.component.scss
+++ b/app/src/app/components/feed/feed.component.scss
@@ -13,9 +13,9 @@ main {
     display: grid;
     grid-template-rows: auto;
     grid-gap: .5rem;
-    margin: .5rem 0;
 
     height: 100%;
+    min-height: 60vh;
 
     background: var(--ion-color-light);
     border-radius: 3px;
