--- a/app/src/app/components/feed/feed.component.scss
+++ b/app/src/app/components/feed/feed.component.scss
@@ -15,7 +15,7 @@ main {
     grid-gap: .5rem;
 
     height: 100%;
-    min-height: 60vh;
+    min-height: 80vh;
 
     background: var(--ion-color-light);
     border-radius: 3px;
@@ -33,6 +33,41 @@ main {
         min-height: 100%;
       }
     }
+  }
+}
+
+section.delete {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+
+  width: 64px;
+  height: 64px;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+
+  > div {
+    background: var(--ion-color-danger);
+    border-radius: 50%;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+
+    height: 48px;
+    width: 48px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    ion-icon {
+      color: var(--ion-color-light);
+      font-size: 32px;
+    }
+  }
+
+  ion-card {
+    display: none;
   }
 }
 
