--- a/app/src/theme/dragula.scss
+++ b/app/src/theme/dragula.scss
@@ -37,3 +37,19 @@ ion-card.gu-mirror {
   opacity: 1;
   filter: alpha(opacity=100);
 }
+
+ion-card.gu-mirror.delete {
+  &:after {
+    content: '';
+
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background: var(--ion-color-danger);
+    opacity: 0.4;
+  }
+}
