--- a/app/src/app/components/feed/feed.component.html
+++ b/app/src/app/components/feed/feed.component.html
@@ -74,8 +74,9 @@
 </ng-container>
 
 <ng-template #feedLoading>
-  <main>
-    Initializing your feed
+  <main class="loading">
+    <ion-spinner color="light"></ion-spinner>
+    <ion-label class="ion-padding">Loading your feed...</ion-label>
   </main>
 </ng-template>
 
