--- a/app/src/app/pages/home/home.page.html
+++ b/app/src/app/pages/home/home.page.html
@@ -10,8 +10,9 @@
   </ng-container>
 
   <ng-template #userLoading>
-    <main>
-      Initializing your anonymous user
+    <main class="loading">
+      <ion-spinner color="light"></ion-spinner>
+      <ion-label class="ion-padding">Initializing your anonymous user...</ion-label>
     </main>
   </ng-template>
 </ion-content>
