--- a/app/src/app/popovers/options/options.component.html
+++ b/app/src/app/popovers/options/options.component.html
@@ -1,17 +1,25 @@
 <ion-list>
-  <ion-item>
-    <ion-label>Pokémon Yellow</ion-label>
+  <ion-item *ngIf="status !== 'new'">
+    <ion-label>New</ion-label>
   </ion-item>
-  <ion-item>
-    <ion-label>Mega Man X</ion-label>
+
+  <ion-item *ngIf="status !== 'disliked'">
+    <ion-label>Delete</ion-label>
   </ion-item>
-  <ion-item>
-    <ion-label>The Legend of Zelda</ion-label>
+
+  <ion-item *ngIf="status !== 'viewing'">
+    <ion-label>Viewing</ion-label>
   </ion-item>
-  <ion-item>
-    <ion-label>Pac-Man</ion-label>
+
+  <ion-item *ngIf="status !== 'applied'">
+    <ion-label>Apply</ion-label>
   </ion-item>
-  <ion-item>
-    <ion-label>Super Mario World</ion-label>
+
+  <ion-item *ngIf="status !== 'rejected'">
+    <ion-label>Rejected</ion-label>
+  </ion-item>
+
+  <ion-item *ngIf="status !== 'winning'">
+    <ion-label>Winner</ion-label>
   </ion-item>
 </ion-list>
