--- a/app/src/app/pages/home/home.page.html
+++ b/app/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Flatboard</ion-title>
+    <ion-title><app-title></app-title></ion-title>
   </ion-toolbar>
 </ion-header>
 
