--- a/app/src/app/components/flat/flat.component.html
+++ b/app/src/app/components/flat/flat.component.html
@@ -1,4 +1,4 @@
-<img [src]="flat.data.image_url"/>
+<deckgo-lazy-img imgSrc="{{flat.data.image_url}}" img-alt="Cover image"></deckgo-lazy-img>
 
 <section>
   <ion-badge [class.ronorp]="flat.data.source === 'ronorp'">Ronorp</ion-badge>
