--- a/app/src/app/components/flat/flat.component.scss
+++ b/app/src/app/components/flat/flat.component.scss
@@ -18,3 +18,10 @@ button {
   top: 0;
   right: 0;
 }
+
+deckgo-lazy-img {
+  --deckgo-lazy-img-width: 100%;
+  --deckgo-lazy-img-height: auto;
+  --deckgo-lazy-img-display: block;
+  --deckgo-lazy-img-object-fit: cover;
+}
