feat: format with prettier

--- a/app/src/app/components/feed/feed.component.html
+++ b/app/src/app/components/feed/feed.component.html
@@ -1,11 +1,11 @@
-<ng-container *ngIf="loaded; else feedLoading;">
+<ng-container *ngIf="loaded; else feedLoading">
   <main>
     <section>
       <div>
         <ion-label class="column-title">New</ion-label>
 
         <div dragula="bag" [attr.status]="'new'">
-          <ion-card *ngFor="let flat of (flatsNew$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
+          <ion-card *ngFor="let flat of flatsNew$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
             <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
           </ion-card>
         </div>
@@ -17,7 +17,7 @@
         <ion-label class="column-title">Viewings</ion-label>
 
         <div dragula="bag" [attr.status]="'viewing'">
-          <ion-card *ngFor="let flat of (flatsViewing$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
+          <ion-card *ngFor="let flat of flatsViewing$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
             <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
           </ion-card>
         </div>
@@ -29,7 +29,7 @@
         <ion-label class="column-title">Applications</ion-label>
 
         <div dragula="bag" [attr.status]="'applied'">
-          <ion-card *ngFor="let flat of (flatsApplied$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
+          <ion-card *ngFor="let flat of flatsApplied$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
             <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
           </ion-card>
         </div>
@@ -41,7 +41,7 @@
         <ion-label class="column-title">Rejected</ion-label>
 
         <div dragula="bag" [attr.status]="'rejected'">
-          <ion-card *ngFor="let flat of (flatsRejected$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
+          <ion-card *ngFor="let flat of flatsRejected$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
             <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
           </ion-card>
         </div>
@@ -53,7 +53,7 @@
         <ion-label class="column-title">Winner</ion-label>
 
         <div dragula="bag" [attr.status]="'winning'">
-          <ion-card *ngFor="let flat of (flatsWinning$ | async);" mode="md" (click)="open(flat)" [attr.key]="flat.id">
+          <ion-card *ngFor="let flat of flatsWinning$ | async" mode="md" (click)="open(flat)" [attr.key]="flat.id">
             <app-flat [flat]="flat" [mobile]="isMobile()" (options)="presentOptionsPopover($event, flat)"></app-flat>
           </ion-card>
         </div>
@@ -68,8 +68,7 @@
   </section>
 
   <ion-infinite-scroll (ionInfinite)="findNext($event)">
-    <ion-infinite-scroll-content>
-    </ion-infinite-scroll-content>
+    <ion-infinite-scroll-content> </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ng-container>
 
@@ -79,4 +78,3 @@
     <ion-label class="ion-padding">Loading your feed...</ion-label>
   </main>
 </ng-template>
-
